--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/net.jcip/jcip-annotations -->
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
